adjusted download button to select-none

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						<p class="md:pl-1 max-w-xs md:max-w-7xl pt-6 md:pt-4 text-center text-lg md:text-2xl">Run iOS apps & games. Fullscreen mode. Mouse, keyboard and controller support.</p>
 
 						<!-- Download buttons -->
-						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6 pt-8 lg:pt-6 items-center text-center">
+						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6 pt-8 lg:pt-6 items-center text-center select-none">
 							<!-- M1 -->
 							<a class="download-buttons flex items-center justify-center space-x-2 font-openSans text-xs md:text-sm tracking-widest uppercase py-4 px-12 md:py-4 md:px-14 rounded-full drop-shadow-sm bg-logo-purple dark:bg-logo-purple-dark hover:bg-logo-purple-darker dark:hover:bg-logo-purple-darker  text-white dark:text-gray-200 cursor-pointer  transition duration-100 ease-linear" href="">
 								<!-- apple logo -->
